service-mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - name: 'route-service-a'
    match:
    - uri:
        prefix: /hello
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: hello-world-service
  - name: 'route-service-b'
    match:
    - uri:
        prefix: /happy
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 81
        host: happy-world-service
